change project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://DmityMegaDev.github.io/PokemonsTest",
+  "homepage": "http://DmityMegaDev.github.io/pokemons",
   "name": "pokemons",
   "version": "0.1.0",
   "private": true,
